# delta_encode

./: Cargo.toml
derive/: Cargo.toml
derive/src/: float.rs  lib.rs  prim.rs  ty.rs
src/: lib.rs
tests/: simple.rs
