[package]
name = "delta_encode"
version = "0.1.0"
authors = ["Matthew Collins <me@thinkof.name>"]
edition = "2018"

[features]
cgmath = ["think_bitio/cgmath"]

[dependencies]
delta_encode_derive = { path = "./derive" }
think_bitio = { git = "https://github.com/thinklibs/think_bitio.git", rev = "77ccfa03a38045593eaafc4ad93273704dd249ff" }

[workspace]
members = [
    "./derive"
]