[package]
name = "delta_encode"
version = "0.1.0"
authors = ["Matthew Collins <me@thinkof.name>"]
edition = "2018"

[features]

[dependencies]
delta_encode_derive = { path = "./derive" }
think_bitio = { git = "https://github.com/thinklibs/think_bitio.git", rev = "d91ec1eeec085a2f20280fa50f98cd767c0e7680" }
cgmath = { version = "0.17.0", optional = true }

[workspace]
members = [
    "./derive"
]